--- a/styles/style.css
+++ b/styles/style.css
@@ -32,26 +32,25 @@ body {
     font-family: 'Montserrat', sans-serif;
     font-size: 24px;
     font-weight: 600;
-    color: #22D4FD;    
+    color: #22D4FD;  
+    text-decoration: none; 
 }
 
-.apresentacao {    
+.apresentacao {
     display: flex;
+    justify-content: space-between; /* Garante que os itens fiquem distribuídos entre as extremidades */
     flex-wrap: wrap; /* Permite que os itens se ajustem conforme a tela */
-    align-items: center;
-    justify-content: center;
-    width: 90%; /* Define uma largura máxima */
-    max-width: 1200px; /* Limita a largura */
-    gap: 20px; /* Reduz espaço entre os elementos */
-    margin-top: 40px; /* Adiciona espaçamento entre o cabeçalho e o corpo da página */
+    align-items: flex-start;
+    gap: 20px;
+    margin-top: 40px;
 }
 
 .apresentacao__conteudo {
-    max-width: 500px;
+    max-width: 60%; /* Ajusta a largura do texto para dar mais espaço para a imagem */
     display: flex; 
     flex-direction: column;
     gap: 20px;
-    text-align: center; /* Centraliza o texto */
+    text-align: left;
 }
 
 .apresentacao__conteudo__titulo {
@@ -108,6 +107,17 @@ body {
         border-radius: 50%;
         border: 5px solid #22D4FD;
         object-fit: cover; /* Mantém a proporção e evita distorção */
+    } 
+
+    .apresentacao__imagem {    
+            width: 600px;
+            height: 500px;
+            border-radius: 15px;
+            border: 5px solid #22D4FD;
+            object-fit: cover;
+            margin-left: 10px;
+
+        
     } 
 
 .rodape {
